cmake_minimum_required(VERSION 2.6)
project(driver_trace)
set(CMAKE_VERBOSE_MAKEFILE ON)
add_definitions("-Wall -pg -g -fPIC")
include_directories(/usr/include/mysql /usr/include/jsoncpp)
link_directories(/usr/local/lib /usr/lib64/mysql) 
link_libraries(mysqlpp mysqlclient jsoncpp curl)
#AUX_SOURCE_DIRECTORY(./src SRC_LIST)
#set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
#add_library(driver_trace SHARED ${SRC_LIST})
#SET_TARGET_PROPERTIES(driver_trace PROPERTIES LINKER_LANGUAGE C)
aux_source_directory(./src SRC_LIST)
add_executable(bin/driver_trace ${SRC_LIST})
