cmake_minimum_required(VERSION 2.6)
project(PushServer)
set(CMAKE_VERBOSE_MAKEFILE ON)
add_definitions("-Wall -pg -g -fPIC")
include_directories(../logic_server/include/ ../common/include ../head ../efnfw/)
AUX_SOURCE_DIRECTORY(./src SRC_LIST)
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
add_library(PushServer SHARED ${SRC_LIST})
SET_TARGET_PROPERTIES(PushServer PROPERTIES LINKER_LANGUAGE C)
